Ajustes para upload de arquivo (sem mapeamento ainda)

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,6 +16,12 @@
         </button>
     </a>
 
+    <a href="/importar" style="margin-left: 10px;">
+        <button class="btn-novo" style="background-color: #8e44ad;">
+            📂 Importar Excel
+        </button>
+    </a>
+
     <div class="tabela-container">
         <table>
             <thead>
