--- a/src/main/resources/templates/cadastro.html
+++ b/src/main/resources/templates/cadastro.html
@@ -7,66 +7,155 @@
 </head>
 <body>
 
-    <h1>Cadastro de Exemplar</h1>
+    <div class="header-container">
+        <h1>📝 Cadastro de Exemplar <span style="font-weight: normal; font-size: 0.8em; color: #7f8c8d;">| Novo registro</span></h1>
+    </div>
 
     <form th:action="@{/salvar}" th:object="${exemplar}" method="post">
 
         <div class="grupo-campos">
             <span class="titulo-grupo">Identificação Única</span>
-            
-            <label>Código (ID):</label>
-            <input type="text" th:field="*{cod}" placeholder="Ex: A-0001" required>
+            <div class="grid-form">
+                <div class="form-item">
+                    <label>Código (ID):</label>
+                    <input type="text" th:field="*{cod}" placeholder="Ex: A-0001" required>
+                </div>
+            </div>
         </div>
 
         <div class="grupo-campos">
             <span class="titulo-grupo">Taxonomia</span>
-            
-            <label>Família:</label> <input type="text" th:field="*{familia}"> <br>
-            <label>Subfamília:</label> <input type="text" th:field="*{subfamilia}"> <br>
-            <label>Tribo:</label> <input type="text" th:field="*{tribo}"> <br>
-            <label>Subtribo:</label> <input type="text" th:field="*{subtribo}"> <br>
-            <label>Gênero:</label> <input type="text" th:field="*{genero}"> <br>
-            <label>Subgênero:</label> <input type="text" th:field="*{subgenero}"> <br>
-            <label>Espécie:</label> <input type="text" th:field="*{especie}"> <br>
-            <label>Subespécie:</label> <input type="text" th:field="*{subespecie}"> <br>
-            <label>Autor:</label> <input type="text" th:field="*{autor}"> <br>
-            <label>Determinador:</label> <input type="text" th:field="*{determinador}"> <br>
-            <label>Sexo:</label> <input type="text" th:field="*{sexo}"> <br>
-            <label>Planta Associada:</label> <input type="text" th:field="*{especieVegetalAssociada}">
+            <div class="grid-form">
+                <div class="form-item">
+                    <label>Família:</label> 
+                    <input type="text" th:field="*{familia}">
+                </div>
+                <div class="form-item">
+                    <label>Subfamília:</label> 
+                    <input type="text" th:field="*{subfamilia}">
+                </div>
+                <div class="form-item">
+                    <label>Tribo:</label> 
+                    <input type="text" th:field="*{tribo}">
+                </div>
+                <div class="form-item">
+                    <label>Subtribo:</label> 
+                    <input type="text" th:field="*{subtribo}">
+                </div>
+                <div class="form-item">
+                    <label>Gênero:</label> 
+                    <input type="text" th:field="*{genero}">
+                </div>
+                <div class="form-item">
+                    <label>Subgênero:</label> 
+                    <input type="text" th:field="*{subgenero}">
+                </div>
+                <div class="form-item">
+                    <label>Espécie:</label> 
+                    <input type="text" th:field="*{especie}">
+                </div>
+                <div class="form-item">
+                    <label>Subespécie:</label> 
+                    <input type="text" th:field="*{subespecie}">
+                </div>
+                <div class="form-item">
+                    <label>Autor:</label> 
+                    <input type="text" th:field="*{autor}">
+                </div>
+                <div class="form-item">
+                    <label>Determinador:</label> 
+                    <input type="text" th:field="*{determinador}">
+                </div>
+                <div class="form-item">
+                    <label>Sexo:</label> 
+                    <input type="text" th:field="*{sexo}">
+                </div>
+                <div class="form-item">
+                    <label>Planta Associada:</label> 
+                    <input type="text" th:field="*{especieVegetalAssociada}">
+                </div>
+            </div>
         </div>
 
         <div class="grupo-campos">
             <span class="titulo-grupo">Armazenamento</span>
-            <label>Gaveta:</label> <input type="text" th:field="*{gaveta}"> <br>
-            <label>Caixa:</label> <input type="text" th:field="*{caixa}">
+            <div class="grid-form">
+                <div class="form-item">
+                    <label>Gaveta:</label> 
+                    <input type="text" th:field="*{gaveta}">
+                </div>
+                <div class="form-item">
+                    <label>Caixa:</label> 
+                    <input type="text" th:field="*{caixa}">
+                </div>
+            </div>
         </div>
 
         <div class="grupo-campos">
             <span class="titulo-grupo">Localização</span>
-            
-            <label>País:</label> <input type="text" th:field="*{pais}"> <br>
-            <label>Estado:</label> <input type="text" th:field="*{estado}"> <br>
-            <label>Cidade:</label> <input type="text" th:field="*{cidade}"> <br>
-            <label>Localidade:</label> <input type="text" th:field="*{localidade}"> <br>
-            <label>Proprietário:</label> <input type="text" th:field="*{proprietarioDoLocalDeColeta}"> <br>
-            <label>Bioma:</label> <input type="text" th:field="*{bioma}"> <br>
-            <label>Latitude:</label> <input type="text" th:field="*{latitude}"> <br>
-            <label>Longitude:</label> <input type="text" th:field="*{longitude}">
+            <div class="grid-form">
+                <div class="form-item">
+                    <label>País:</label> 
+                    <input type="text" th:field="*{pais}">
+                </div>
+                <div class="form-item">
+                    <label>Estado:</label> 
+                    <input type="text" th:field="*{estado}">
+                </div>
+                <div class="form-item">
+                    <label>Cidade:</label> 
+                    <input type="text" th:field="*{cidade}">
+                </div>
+                <div class="form-item">
+                    <label>Localidade:</label> 
+                    <input type="text" th:field="*{localidade}">
+                </div>
+                <div class="form-item">
+                    <label>Proprietário:</label> 
+                    <input type="text" th:field="*{proprietarioDoLocalDeColeta}">
+                </div>
+                <div class="form-item">
+                    <label>Bioma:</label> 
+                    <input type="text" th:field="*{bioma}">
+                </div>
+                <div class="form-item">
+                    <label>Latitude:</label> 
+                    <input type="text" th:field="*{latitude}">
+                </div>
+                <div class="form-item">
+                    <label>Longitude:</label> 
+                    <input type="text" th:field="*{longitude}">
+                </div>
+            </div>
         </div>
 
         <div class="grupo-campos">
             <span class="titulo-grupo">Coleta</span>
-            
-            <label>Coletor:</label> <input type="text" th:field="*{coletor}"> <br>
-            <label>Método:</label> <input type="text" th:field="*{metodoDeAquisicao}"> <br>
-            <label>Data:</label> <input type="text" th:field="*{data}" placeholder="DD/MM/AAAA"> <br>
-            <label>Horário:</label> <input type="text" th:field="*{horarioColeta}">
+            <div class="grid-form">
+                <div class="form-item">
+                    <label>Coletor:</label> 
+                    <input type="text" th:field="*{coletor}">
+                </div>
+                <div class="form-item">
+                    <label>Método:</label> 
+                    <input type="text" th:field="*{metodoDeAquisicao}">
+                </div>
+                <div class="form-item">
+                    <label>Data:</label> 
+                    <input type="text" th:field="*{data}" placeholder="DD/MM/AAAA">
+                </div>
+                <div class="form-item">
+                    <label>Horário:</label> 
+                    <input type="text" th:field="*{horarioColeta}">
+                </div>
+            </div>
         </div>
 
-        <button type="submit" class="btn-salvar">Salvar Tudo</button>
-        <a href="/" class="btn-cancelar">Cancelar</a>
+        <div style="margin-bottom: 40px; display: flex; align-items: center;">
+            <button type="submit" class="btn btn-salvar">Salvar Tudo</button>
+            <a href="/" class="btn btn-cancelar">Cancelar</a>
+        </div>
 
     </form>
-    <br><br>
 </body>
 </html>
